deploy/dm-mylogger.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mylogger
  namespace: kubewatch
  labels:
    app: mylogger
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mylogger
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mylogger
        deploymentconfig: mylogger
    spec:
      containers:
        - name: mylogger
          image: mylogger:1.4
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
