deploy/svc-mylogger.yaml
kind: Service
apiVersion: v1
metadata:
  name: mylogger
  namespace: kubewatch
  labels:
    app: mylogger
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: mylogger
    deploymentconfig: mylogger
  type: ClusterIP
